Update curations with timed and fixed  custom documents
