# src/functions/list-curations/handler.ts
@@ -1,26 +1,17 @@
 import { ValidatedEventAPIGatewayProxyEvent } from "@libs/api-gateway";
 import { middyfy } from "@libs/lambda";
 import { getElastic } from "src/elastic";
-import { timedCurationsService } from "src/database/services";
+import { curationsService } from "src/database/services";
 import { getElasticCredentialsForSession } from "@libs/auth-utils";
 
 /**
- * Lambda for find timed curation
+ * Lambda for listing curations
  *
  * @param event event
  */
-const findTimedCuration: ValidatedEventAPIGatewayProxyEvent<any> = async event => {
-  const { pathParameters, headers } = event;
-  const { authorization, Authorization } = headers;
-  const id = pathParameters?.id;
+const listCurations: ValidatedEventAPIGatewayProxyEvent<any> = async event => {
+  const { headers: { authorization, Authorization } } = event;
   const authHeader = Authorization || authorization;
-
-  if (!id) {
-    return {
-      statusCode: 400,
-      body: "Bad request"
-    };
-  }
 
   const auth = await getElasticCredentialsForSession(authHeader);
   if (!auth) {
@@ -38,18 +29,12 @@ const findTimedCuration: ValidatedEventAPIGatewayProxyEvent<any> = async event =
     };
   }
 
-  const timedCuration = await timedCurationsService.findTimedCuration(id);
-  if (!timedCuration) {
-    return {
-      statusCode: 404,
-      body: "Not found"
-    };
-  }
+  const curations = await curationsService.listCurations();
 
   return {
     statusCode: 200,
-    body: JSON.stringify(timedCuration)
+    body: JSON.stringify(curations)
   };
 };
 
-export const main = middyfy(findTimedCuration);
+export const main = middyfy(listCurations);
